Swap 9px font and shadow text.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3585,6 +3585,33 @@
                       </div>
                     </div>
                   </h2>
+                </div><!-- text render -->
+                <hr>
+                <div>
+                  <h2 class="title has-text-dark is-size-6 columns">
+                    <div class="column">Shadow text render
+                      <p class="subtitle has-text-dark is-size-7 mb-0 has-text-justified">
+                        Apply a subtle shadow effect on each character.
+                      </p>
+                      <p class="is-size-7 mt-2 mb-1">off</p>
+                      <p name="display-sample-text" class="font-ibm_vga_9x16 has-text-weight-normal">
+                        &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
+                      </p>
+                      <p class="is-size-7 mt-2 mb-1">on</p>
+                      <p name="display-sample-text"
+                        class="font-ibm_vga_9x16 has-text-weight-normal theme-windows theme-windows-shadowed">
+                        &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
+                      </p>
+                    </div>
+                    <div class="column is-2">
+                      <div class="toggleswitch">
+                        <input type="checkbox" id="textRenderShadow" tabindex="0" checked>
+                        <label class="toggleswitch-label" for="textRenderShadow"></label>
+                      </div>
+                    </div>
+                  </h2>
                 </div>
                 <!-- accurate 9px EGA/VGA fonts -->
                 <hr>
@@ -3614,34 +3641,6 @@
                       <div class="toggleswitch">
                         <input type="checkbox" id="accurate9pxFonts" tabindex="0" checked>
                         <label class="toggleswitch-label" for="accurate9pxFonts"></label>
-                      </div>
-                    </div>
-                  </h2>
-                </div>
-                <!-- text render -->
-                <hr>
-                <div>
-                  <h2 class="title has-text-dark is-size-6 columns">
-                    <div class="column">Shadow text render
-                      <p class="subtitle has-text-dark is-size-7 mb-0 has-text-justified">
-                        Apply a subtle shadow effect on each character.
-                      </p>
-                      <p class="is-size-7 mt-2 mb-1">off</p>
-                      <p name="display-sample-text" class="font-ibm_vga_9x16 has-text-weight-normal">
-                        &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
-                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
-                      </p>
-                      <p class="is-size-7 mt-2 mb-1">on</p>
-                      <p name="display-sample-text"
-                        class="font-ibm_vga_9x16 has-text-weight-normal theme-windows theme-windows-shadowed">
-                        &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
-                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
-                      </p>
-                    </div>
-                    <div class="column is-2">
-                      <div class="toggleswitch">
-                        <input type="checkbox" id="textRenderShadow" tabindex="0" checked>
-                        <label class="toggleswitch-label" for="textRenderShadow"></label>
                       </div>
                     </div>
                   </h2>
