Simplified the welcome opening.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -124,20 +124,10 @@
             </div>
             <div class="notice" style="display: none;" id="newInstallNotice">
               <div class="notification is-success is-light">
-                <p class="mb-2 is-size-2">Welcome. <small>Get started with,</small></p>
-                <p class="mt-2 is-size-5">Dozens of
-                  <a id="newInstallSamples">sample text art files</a>
-                  to try with RetroTxt.
-                </p>
-                <p class="mt-2 is-size-5"><a href="https://docs.retrotxt.com/usage/first/" target="_blank">
-                    First-time usage documentation</a>.</p>
-                <p class="mt-2 is-size-5">
-                  Use RetroTxt as a text file viewer. <span class="has-text-info">*</span>
-                </p>
-                <p class="mt-1">
-                  Either, drag-and-drop text files to this browser.<br>
-                  Or use <code class="file-url-scheme">file:///</code> in a tab.
-                </p>
+                <p class="mb-2 is-size-3">Welcome</p>
+                <p class="mt-2 is-size-5">The default settings are ready to go,
+                  but using the <em>Fonts</em> and <tab>Display</tab> tabs,
+                  you can tweak these to your liking.</p>
               </div>
             </div>
           </div>
@@ -4064,7 +4054,7 @@
           <div class="columns">
             <div class="column is-half">
               <div class="box">
-                <h1 class="title has-text-black-ter is-size-3 mt-4">Feature</h1>
+                <h1 class="title has-text-black-ter is-size-3 mt-4">RetroTxt</h1>
                 <!-- backup and restore -->
                 <div>
                   <h2 class="title has-text-dark is-size-6 columns">
@@ -4103,9 +4093,9 @@
                     </div>
                   </article>
                   <h2 class="title has-text-dark is-size-6 columns">
-                    <div class="column">Run RetroTxt on files hosted on these domains
+                    <div class="column">Autorun for websites
                       <p class="subtitle has-text-dark is-size-6 mt-2 has-text-justified">
-                        It runs in the background and applies RetroTxt to text files
+                        It runs in the background and applies RetroTxt on text files
                         hosted on these websites.</p>
                       <div class="field-body">
                         <div class="field">
@@ -4155,8 +4145,7 @@
                     <div class="column is-2"> </div>
                   </h2>
                   <p class="subtitle has-text-dark is-size-6 has-text-justified mb-4">
-                    The options theme sets this options tab interface's background and button
-                    <span class="msg-color">color</span>.
+                    The options theme sets this options tab background <span class="msg-color">color</span>.
                   </p>
                   <div id="optionTheme">
                     <div class="buttons mb-0">
